--- a/app/src/main/res/xml/stock_price_num_keyboard.xml
+++ b/app/src/main/res/xml/stock_price_num_keyboard.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?><!-- 数字键盘 -->
+<?xml version="1.0" encoding="UTF-8"?>
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
-    android:horizontalGap="0dp"
-    android:keyHeight="61dp"
+    android:horizontalGap="2dp"
+    android:keyHeight="62dp"
     android:keyWidth="25%p"
-    android:verticalGap="0dp">
+    android:verticalGap="2dp">
     <Row>
         <Key
             android:codes="49"
@@ -18,6 +18,7 @@
 
         <Key
             android:codes="-5"
+            android:iconPreview="@drawable/bg_custom_key_light_gray"
             android:keyLabel="退格"/>
     </Row>
     <Row>
@@ -33,6 +34,7 @@
             android:keyLabel="6" />
         <Key
             android:codes="@integer/keycode_empty_text"
+            android:iconPreview="@drawable/bg_custom_key_light_gray"
             android:keyLabel="清空"/>
     </Row>
     <Row>
@@ -49,7 +51,7 @@
 
         <Key
             android:codes="@integer/keycode_hide_keyboard"
-            android:isRepeatable="true"
+            android:iconPreview="@drawable/bg_custom_key_light_gray"
             android:keyLabel="隐藏"/>
     </Row>
     <Row>
@@ -65,7 +67,7 @@
             android:keyWidth="25%p" />
         <Key
             android:codes="@integer/keycode_cur_price"
-            android:isRepeatable="true"
+            android:iconPreview="@drawable/bg_custom_key_red"
             android:keyLabel="当前价"
             android:keyWidth="50%p" />
     </Row>
