更新自定义键盘, 加入对话框工具包

--- a/app/src/main/res/layout/my/layout/fragment_custom_keyboard.xml
+++ b/app/src/main/res/layout/my/layout/fragment_custom_keyboard.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/bg_color"
-    android:layout_gravity="top"
+    android:gravity="bottom"
     android:showDividers="beginning|middle|end"
     android:divider="@drawable/layout_divider_line"
     android:orientation="vertical">
@@ -260,11 +256,3 @@
     </LinearLayout>
 
 </LinearLayout>
-<!--
-
-    <FrameLayout
-        android:layout_gravity="bottom"
-        android:layout_width="match_parent"
-        android:layout_height="500px"
-        android:background="@color/bg_color_red"/>
-</FrameLayout>-->
