--- a/app/src/main/res/layout/my/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/my/layout/fragment_my_info.xml
@@ -12,7 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/bg_color"
-        android:orientation="vertical">
+        android:divider="@drawable/layout_divider_line"
+        android:orientation="vertical"
+        android:showDividers="beginning|middle|end">
 
         <TextView
             android:id="@+id/tv_brokerage_list"
@@ -42,9 +44,35 @@
             android:id="@+id/tv_js_native"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_bright"
+            android:background="@android:color/darker_gray"
             android:padding="@dimen/margin_normal"
             android:text="JS-Native互调" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_notification_open"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="@android:color/holo_green_dark"
+                android:padding="@dimen/margin_normal"
+                android:text="弹出通知" />
+
+            <TextView
+                android:id="@+id/tv_notification_close"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="@android:color/holo_blue_dark"
+                android:padding="@dimen/margin_normal"
+                android:text="隐藏通知" />
+        </LinearLayout>
     </LinearLayout>
 
 
