--- a/app/src/main/res/layout/common/layout/layout_notification.xml
+++ b/app/src/main/res/layout/common/layout/layout_notification.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#e0000000"
+    android:background="@color/transparent20"
+    android:layout_margin="@dimen/margin_normal"
     android:orientation="vertical">
 
     <View
