--- a/app/src/main/res/layout/message/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/message/layout/fragment_message_list.xml
@@ -38,4 +38,12 @@
         android:background="@android:color/holo_blue_dark"
         android:padding="@dimen/margin_normal"
         android:text="自定义控件-日历任务控件" />
+
+    <TextView
+        android:id="@+id/tv_list_container_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_dark"
+        android:padding="@dimen/margin_normal"
+        android:text="ListContainerLayout" />
 </LinearLayout>
