--- a/app/src/main/res/layout/my/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/my/layout/fragment_my_info.xml
@@ -137,6 +137,14 @@
             android:background="@android:color/white"
             android:padding="@dimen/margin_normal"
             android:text="FileProvider Test" />
+
+        <TextView
+            android:id="@+id/tv_palette"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/darker_gray"
+            android:padding="@dimen/margin_normal"
+            android:text="android实现画板功能" />
     </LinearLayout>
 
 
